--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,8 @@ services:
         RAILS_ENV: ${RAILS_ENV:-development}
     command: bash -lc "bundle exec rails s -b 0.0.0.0"
     volumes:
-      - .:/app
+      - .:/app:cached
+      - node_modules:/app/node_modules
     ports:
       - "3000:3000"
     depends_on:
@@ -66,3 +67,4 @@ services:
       SHAKAPACKER_DEV_SERVER_PORT: "3035"
 volumes:
   db_data:
+  node_modules:
