--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,10 @@ jobs:
     steps:
       - checkout
 
+      - run:
+          name: Setup dotenv
+          command: cp .env.example .env
+
       # install docker-compose v2
       - run:
           name: Install Docker-Compose
@@ -48,6 +52,10 @@ jobs:
     steps:
       - attach_workspace:
           at: .
+
+      - run:
+          name: Setup dotenv
+          command: cp .env.example .env
 
       # docker-compose is needed here too
       # install docker-compose v2
