--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -181,18 +181,15 @@ jobs:
 
 workflows:
   version: 2
-  build_and_test:
+  build_test_deploy:
     jobs:
       - build
       - test:
           requires:
             - build
-
-  deploy_to_heroku:
-    jobs:
       - deploy:
           requires:
-            - build_and_test
+            - test
           filters:
             branches:
-              only: auto-deploy
+              only: "auto-deploy"
