--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,6 @@
 # [Circleci provided example](https://github.com/CircleCI-Public/circleci-demo-ruby-rails/blob/master/.circleci/config.yml)
 # [caching](https://circleci.com/docs/2.0/caching/)
 #
-# .circleci/config.yml
-
 version: 2.1
 
 orbs:
@@ -65,65 +63,65 @@ jobs:
           command: cp .env.example .env
 
       # Install docker-compose v2 again inside this container
-      # - run:
-      #     name: Install Docker-Compose
-      #     shell: bash
-      #     command: |
-      #       COMPOSE_VERSION=2.18.1
-      #       mkdir -p "${HOME}/bin"
-      #       curl -SL "https://github.com/docker/compose/releases/download/v${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" \
-      #         -o "${HOME}/bin/docker-compose"
-      #       chmod +x "${HOME}/bin/docker-compose"
-      #       echo 'export PATH=$HOME/bin:$PATH' >> $BASH_ENV
+      - run:
+          name: Install Docker-Compose
+          shell: bash
+          command: |
+            COMPOSE_VERSION=2.18.1
+            mkdir -p "${HOME}/bin"
+            curl -SL "https://github.com/docker/compose/releases/download/v${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" \
+              -o "${HOME}/bin/docker-compose"
+            chmod +x "${HOME}/bin/docker-compose"
+            echo 'export PATH=$HOME/bin:$PATH' >> $BASH_ENV
 
-      # # Start only the Postgres service
-      # - run:
-      #     name: Start Postgres
-      #     command: |
-      #       docker-compose up -d db && sleep 10
+      # Start only the Postgres service
+      - run:
+          name: Start Postgres
+          command: |
+            docker-compose up -d db && sleep 10
 
-      # # Wait for Postgres to accept connections
-      # - run:
-      #     name: Wait for Postgres
-      #     command: |
-      #       docker run --rm --network container:$(docker-compose ps -q db) \
-      #         appropriate/curl:latest sh -c "until nc -z db 5432; do sleep 1; done"
+      # Wait for Postgres to accept connections
+      - run:
+          name: Wait for Postgres
+          command: |
+            docker run --rm --network container:$(docker-compose ps -q db) \
+              appropriate/curl:latest sh -c "until nc -z db 5432; do sleep 1; done"
 
-      # # Compile your JS packs (in test mode)
-      # - run:
-      #     name: Compile Shakapacker (Rails task)
-      #     command: |
-      #       docker-compose run --rm \
-      #         -e RAILS_ENV=test \
-      #         web \
-      #         bin/rails shakapacker:compile
+      # Compile your JS packs (in test mode)
+      - run:
+          name: Compile Shakapacker (Rails task)
+          command: |
+            docker-compose run --rm \
+              -e RAILS_ENV=test \
+              web \
+              bin/rails shakapacker:compile
 
-      # # Run RSpec (with DB setup)
-      # - run:
-      #     name: Run RSpec
-      #     command: |
-      #       docker-compose \
-      #       run --rm \
-      #       -e DISABLE_DATABASE_ENVIRONMENT_CHECK=1 \
-      #       web \
-      #       bundle exec rspec
+      # Run RSpec (with DB setup)
+      - run:
+          name: Run RSpec
+          command: |
+            docker-compose \
+            run --rm \
+            -e DISABLE_DATABASE_ENVIRONMENT_CHECK=1 \
+            web \
+            bundle exec rspec
 
-      # # Lint
-      # - run:
-      #     name: RuboCop
-      #     command: docker-compose run --rm web bundle exec rubocop
+      # Lint
+      - run:
+          name: RuboCop
+          command: docker-compose run --rm web bundle exec rubocop
 
-      # security checks
-      # Brakeman causes a stack overflow inside Bundler’s "friendly errors" ERB renderer on CI only.
-      # disabling it for now
-      # - run:
-      #     name: Brakeman
-      #     command: docker-compose run --rm web bundle exec brakeman
+      security checks
+      Brakeman causes a stack overflow inside Bundler’s "friendly errors" ERB renderer on CI only.
+      disabling it for now
+      - run:
+          name: Brakeman
+          command: docker-compose run --rm web bundle exec brakeman
 
-      # Tear everything down
-      # - run:
-      #     name: Clean up
-      #     command: docker-compose down --volumes
+      Tear everything down
+      - run:
+          name: Clean up
+          command: docker-compose down --volumes
 
   deploy:
     machine: true
