only deploy master branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -190,4 +190,4 @@ workflows:
             - test
           filters:
             branches:
-              only: "auto-deploy"
+              only: "master"
