switch sendgrid to mailgun

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ FOG_REGION=
 RAILS_HOST='http://localhost'
 RAILS_PORT='5000'
 REDISCLOUD_URL='localhost'
-SENDGRID_SMTP_PORT='587'
-SENDGRID_SMTP_SERVER=
-SENDGRID_SMTP_LOGIN=
-SENDGRID_SMTP_PASSWORD=
+MAILGUN_SMTP_PORT='587'
+MAILGUN_DOMAIN=
+MAILGUN_SMTP_LOGIN=
+MAILGUN_SMTP_PASSWORD=
