--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "packageManager": "yarn@1.22.19",
   "dependencies": {
     "@activeadmin/activeadmin": "2.13.0",
+    "@rails/ujs": "^7.1.3",
     "@client-side-validations/client-side-validations": "^0.3.0",
     "@hotwired/turbo": "^7.3.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
