--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "imagesloaded": "4.1.4",
     "infinite-scroll": "4.0.0",
     "jquery": "^3.7.0",
+    "jquery-ui": "^1.13.2",
+    "jquery-ujs": "^1.2.3",
     "marked": "4.0.10",
     "masonry-layout": "4.2.2",
     "photoswipe": "4.1.3",
